<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/default_margin"
    android:clipToPadding="false">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/app_description"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <TextView
        android:id="@+id/textViewHowToUse"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/how_to_use_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/imageViewClick"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHowToUse"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginHorizontal="@dimen/small_margin"
        app:layout_constraintHorizontal_bias="0.05"
        app:srcCompat="@drawable/img_click" />

    <ImageView
        android:id="@+id/imageViewLoop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewClick"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginHorizontal="@dimen/small_margin"
        app:layout_constraintHorizontal_bias="0.05"
        app:srcCompat="@drawable/ic_loop" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/click_guide"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/imageViewClick"
        app:layout_constraintTop_toBottomOf="@+id/textViewHowToUse" />


    <TextView
        android:id="@+id/textViewLoop"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/loop_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewLoop"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <ImageView
        android:id="@+id/imageViewMultiple"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoop"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_marginTop="@dimen/big_margin"
        app:srcCompat="@drawable/ic_multiple" />

    <TextView
        android:id="@+id/textViewMultiple"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/multiple_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewMultiple"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoop" />

    <ImageView
        android:id="@+id/imageViewStop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMultiple"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_marginTop="@dimen/big_margin"
        app:srcCompat="@drawable/ic_stop" />

    <TextView
        android:id="@+id/textViewStop"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/stop_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewStop"
        app:layout_constraintTop_toBottomOf="@+id/textViewMultiple" />



    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStop" />

    <TextView
        android:id="@+id/tv_creedits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:gravity="center"
        android:text="@string/text_Credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:textStyle="bold"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>